# MNN

./: CMakeLists.txt  build_for_arm32.sh  build_for_arm64.sh  build_for_x86.sh  export.sh
demo/exec/: CMakeLists.txt
demo/exec/mnn-yolov5/: README.md
demo/exec/mnn-yolov5/checkpoints/: yolov5n-8bit.mnn
demo/exec/mnn-yolov5/include/: Yolo.h
demo/exec/mnn-yolov5/src/: Yolo.cpp  detector.cpp  detector.h  main.cpp
demo/mnn-yolov5/: .gitignore  CMakeLists.txt  build_for_arm64.sh  yolov5
demo/mnn-yolov5/src/: Yolo.cpp
source/backend/cpu/: CPURuntime.cpp
